--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
 	"require": {
 		"slim/slim": "^4.14",
 		"slim/psr7": "^1.7",
-		"slim/csrf": "^1.5"
+		"slim/csrf": "^1.5",
+		"guzzlehttp/guzzle": "^7.9"
 	},
 	"autoload": {
 		"psr-4": {
