feat: send leads to crm api

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Database
 DB_HOST="db"
-DB_DATABASE="gmdb"
+DB_DATABASE="gmleads_db"
 DB_PORT="3306"
 DB_USERNAME="admin"
 DB_PASSWORD="secret"
@@ -12,3 +12,8 @@ FRONTEND_BASE_URL=""
 DISPLAY_ERROR_DETAILS=false
 LOG_ERRORS=false
 LOG_ERRORS_DETAILS=false
+
+# CRM
+CRM_EMAIL=""
+CRM_PASSWORD=""
+
