--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
 		"slim/slim": "^4.14",
 		"slim/psr7": "^1.7",
 		"slim/csrf": "^1.5",
-		"guzzlehttp/guzzle": "^7.9"
+		"guzzlehttp/guzzle": "^7.9",
+		"monolog/monolog": "^3.9"
 	},
 	"autoload": {
 		"psr-4": {
