--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     volumes:
       - ./:/var/www/html
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - logs:/var/www/logs
     depends_on:
       - php
       - db
@@ -26,6 +27,7 @@ services:
     container_name: gmleads_api
     volumes:
       - ./:/var/www/html
+      - logs:/var/www/logs
     depends_on:
       - db
     env_file:
@@ -71,3 +73,4 @@ networks:
 
 volumes:
   gmleads_data:
+  logs:
