--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
 		"slim/psr7": "^1.7",
 		"slim/csrf": "^1.5",
 		"guzzlehttp/guzzle": "^7.9",
-		"monolog/monolog": "^3.9"
+		"monolog/monolog": "^3.9",
+		"php-di/php-di": "^7.0",
+		"symfony/var-dumper": "^7.3"
 	},
 	"autoload": {
 		"psr-4": {
