refactor: change strategy for generate event

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ LOG_ERRORS_DETAILS=false
 CRM_EMAIL=""
 CRM_PASSWORD=""
 
+# Github
+GITHUB_API_TOKEN=""
+GITHUB_REPO_OWNER=""
+GITHUB_REPO_NAME=""
