--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,23 @@
 			"Http\\": "Http/"
 		}
 	},
+	"autoload-dev": {
+		"psr-4": {
+			"Tests\\": "tests/"
+		}
+	},
 	"authors": [
 		{
 			"name": "Tiago Araujo",
 			"email": "tiagomuniz130@gmail.com"
 		}
-	]
+	],
+	"require-dev": {
+		"pestphp/pest": "^3.8"
+	},
+	"config": {
+		"allow-plugins": {
+			"pestphp/pest-plugin": true
+		}
+	}
 }
