--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
 		}
 	],
 	"require-dev": {
-		"pestphp/pest": "^3.8"
+		"pestphp/pest": "^3.8",
+		"mockery/mockery": "^1.6"
 	},
 	"config": {
 		"allow-plugins": {
